--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,11 @@ button {
   background: transparent;
   border: none;
 }
+
+h1 span {
+  font-weight: 200;
+}
+
 #app {
   max-width: 500px;
   margin: 0 auto;
@@ -43,7 +48,8 @@ button {
   grid-column: span 2 / span 2;
 }
 
-.roll {
+.roll,
+.dice-input {
   display: flex;
   gap: 0.5rem;
   padding: 1rem 0;
